--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,11 @@
     "css.completion.completePropertyWithSemicolon": true,
     "css.completion.triggerPropertyValueCompletion": true,
     "html-css-class-completion.enableEmmetSupport": true,
-    "html-css-class-completion.includeGlobPattern": "**/*.{css,html}",
+    "html-css-class-completion.includeGlobPattern": "**/static/**/*.css",
+    "html-css-class-completion.CSSFileGlobs": [
+        "app/main/static/css/bootstrap.min.css",
+        "**/static/**/*.css"
+    ],
     "emmet.includeLanguages": {
         "django-html": "html"
     },
